Fixed Release configuration in test project

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,7 @@
 /TestResults/10c03623-65c4-480b-85db-b246cb87baea
 /Source/UnitTestHelpers/obj/Debug
 /Source/UnitTestHelpers.Tests/obj/Debug
+/TestResults/3bf154b0-65d4-4eab-af54-792b98247d4b
+/Source/UnitTestHelpers/obj/Release
+/Source/UnitTestHelpers.Tests/obj/Release
+/Output/Release/AnyCPU
